add course routes and methods
