# routes/index.js
@@ -10,7 +10,13 @@ router.post("/students", studController.addStudent);
 router.put("/students/:id", studController.modifyStudentData);
 router.delete("/students/:id", studController.deteleStudent);
 
-// router.get("/courses", courseController.getAllCourses)
-// router.get("/courses/:id", courseController.getSingleCourse)
+
+router.get("/courses", courseController.getAllCourses);
+router.get("/courses/:id", courseController.getOneCourse);
+router.post("/courses", courseController.addCourse);
+router.put("/courses/:id", courseController.modifyCourseData);
+router.delete("/courses/:id", courseController.deteleCourse);
+
+
 
 module.exports = router;
